# Algorithm-

./: CMakeLists.txt  README.md
UnionBySize/: CMakeLists.txt  Kruskal.h  UnionBySize.h  main.cpp
a1/: main.cpp
a3/: CMakeLists.txt  main.cpp
a4/: CMakeLists.txt  addresses.txt  main.cpp
a5/sorting/: CMakeLists.txt  build_run_linux.sh  build_run_win_msys2.sh
a5/sorting/data/: addresses.txt  coordinates.txt  numbers.txt
a5/sorting/src/: main.cpp
a5/sorting/src/algorithms/: InsertionSortGeneric.h  InsertionSortGenericWithComparator.h  InsertionSortIntegers.h  MergeSortGeneric.h  MergeSortGenericWithComparator.h  MergeSortIntegers.h  QuickSortGeneric.h  QuickSortGenericWithComparator.h  QuickSortIntegers.h
a5/sorting/src/comparator/: ByState.h  Comparator.h  CoordinateYXComparator.h  Descending.h
a5/sorting/src/entity/: Coordinate.h  MailingAddress.h
a5/sorting/src/utilities/: ArrayUtilities.h
graphs/: build_run_linux.sh  build_run_win_msys2.sh
graphs/src/: DirectedGraph.h  main.cpp
graphs2/src/algorithms/: DijkstraAlgorithm.h  DijkstraOutput.h
graphs2/src/graph/: Graph.h  HashFunctions.h  Vertex.h
src/: main.cpp
src/entity/: City.h  Object.h  StringElement.h
src/graph/: Edge.h
